Add copy constructor example

--- a/src/Cpp11/CMakeLists.txt
+++ b/src/Cpp11/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(miscellaneous)
 add_subdirectory(thread)
 add_subdirectory(time)
 add_subdirectory(multiple_files_templates)
+add_subdirectory(rule_of_three_five_zero)
