Add CRTP examples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 project(CppExamples)
 cmake_minimum_required(VERSION 2.8)
 
-add_subdirectory(src/Cpp11)
+add_subdirectory(src/cpp11)
+add_subdirectory(src/cpp14)
+add_subdirectory(src/cpp17)
