--- a/src/cpp11/CMakeLists.txt
+++ b/src/cpp11/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(thread)
 add_subdirectory(time)
 add_subdirectory(multiple_files_templates)
 add_subdirectory(rule_of_three_five_zero)
+add_subdirectory(crtp)
