--- a/src/cpp11/CMakeLists.txt
+++ b/src/cpp11/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(time)
 add_subdirectory(multiple_files_templates)
 add_subdirectory(rule_of_three_five_zero)
 add_subdirectory(crtp)
+add_subdirectory(sfinae)
