Added tag dispatch

--- a/src/cpp11/CMakeLists.txt
+++ b/src/cpp11/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(multiple_files_templates)
 add_subdirectory(rule_of_three_five_zero)
 add_subdirectory(crtp)
 add_subdirectory(sfinae)
+add_subdirectory(tag_dispatch)
